--- a/package.json
+++ b/package.json
@@ -2,14 +2,25 @@
   "name": "fun-ov",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "js/index.js",
+  "types": "js/index.d.ts",
   "scripts": {
     "test": "jest",
-    "test:debug": "node --inspect node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect node_modules/.bin/jest --runInBand",
+    "prepublish": "npx tsc --build tsconfig.json && rm -r js/test && mv js/lib/* ./js/ && rmdir js/lib"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "functional",
+    "object",
+    "validation",
+    "fun",
+    "composable"
+  ],
+  "author": "Pujit Mehrotra",
   "license": "ISC",
+  "files": [
+    "js"
+  ],
   "devDependencies": {
     "@tsconfig/node12": "^1.0.7",
     "@types/jest": "^26.0.21",
@@ -18,6 +29,6 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3"
+    "typescript": "^4.8.2"
   }
 }
